@@ -15,6 +15,8 @@
 
 -------------------------------------------------------------------------------
 
+	* Support --db-verify for sqlite3.
+
 	* Fix defect where the database verification method would not be called
 	  for traditional Berkeley DB databases. Reported by Eric Wood.
 
